--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,12 @@ import Tour from '../components/Tour.astro';
 
 let title = 'My New Astro Site!';
 
+import MySiteLayout from '../layouts/MySiteLayout.astro';
+
+<MySiteLayout>
+  <p>My page content, wrapped in a layout!</p>
+</MySiteLayout>
+
 ---
 
 <html lang="en">
