--- a/src/layouts/MySiteLayout.astro
+++ b/src/layouts/MySiteLayout.astro
@@ -9,7 +9,7 @@
       <a href="#">Contact</a>
     </nav>
     <article>
-      <slot /> <!-- your content is injected here -->
+      <slot /> <!-- your content is injected here -->test
     </article>
   </body>
 </html>
